Fix spacing

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -23,6 +23,7 @@ page-home {
   }
 
   h3 {
+    margin-top: 0;
     margin-bottom: 25px;
   }
 
